Bug 320951 ASSERTION: file too large: 'Error', mozJSComponentLoader.cpp line 1084 r=dbradley sr=darin